--- a/NHT_Report.tex
+++ b/NHT_Report.tex
@@ -1012,7 +1012,7 @@ Submitted to: \\[0.5\baselineskip]
 		\textbf{Temporal (Section \ref{sec:temporal})}
 		
 		\noindent
-		Again, a pseudo-analytical solution is computed, this time with $2^{6} = 64$ spatial nodes (So that the Von Neumann stability condition (Eq. \ref{eq:vonneumann}) remains satisfied for a few data points for Explicit Euler stability) and $2^{14} = 16384$ time steps using the parameters outlined in Table \ref{tbl:parameters}. The Heat Equation (Eq. \ref{eq:heat}) is then solved while varying the number of time steps from $2^{3}\ to\ 2^{11}$ ($8\ to\ 2048$) and the error in comparison to the pseudo-analytical solution is calculated using Eq. \ref{eq:L2Norm}. T his is done for all three methods and hte error is then plotted as a function of $\Delta t$. Figure \ref{fig:expectdt} was created by plotting the expected errors for each method given the above information and should be used to compare the test results in Section \ref{sec:temporal}. It should be noted that the Crank-Nicolson method are expected to converge as shown, where a knee/reduction in slope in the error curve is present since the $\Delta x^{2}$ term will become dominant once the $\Delta t^{2}$ becomes small at small $\Delta t$. This behavior is not expected for the Explicit Euler and Implicit Euler methods since $\Delta t$ remains large enough to not be negligible compared to the $\Delta t^{2}$ reduction in error in Crank-Nicolson. The result should appear almost as three identical lines at small $\Delta t$ due to this behavior.
+		Again, a pseudo-analytical solution is computed, this time with $2^{6} = 64$ spatial nodes (So that the Von Neumann stability condition (Eq. \ref{eq:vonneumann}) remains satisfied for a few data points for Explicit Euler stability) and $2^{14} = 16384$ time steps using the parameters outlined in Table \ref{tbl:parameters}. The Heat Equation (Eq. \ref{eq:heat}) is then solved while varying the number of time steps from $2^{3}\ to\ 2^{11}$ ($8\ to\ 2048$) and the error in comparison to the pseudo-analytical solution is calculated using Eq. \ref{eq:L2Norm}. This is done for all three methods and hte error is then plotted as a function of $\Delta t$. Figure \ref{fig:expectdt} was created by plotting the expected errors for each method given the above information and should be used to compare the test results in Section \ref{sec:temporal}. It should be noted that the Crank-Nicolson method are expected to converge as shown, where a knee/reduction in slope in the error curve is present since the $\Delta x^{2}$ term will become dominant once the $\Delta t^{2}$ becomes small at small $\Delta t$. This behavior is not expected for the Explicit Euler and Implicit Euler methods since $\Delta t$ remains large enough to not be negligible compared to the $\Delta t^{2}$ reduction in error in Crank-Nicolson. The result should appear almost as three identical lines at small $\Delta t$ due to this behavior.
 		
 
 		\FloatBarrier
@@ -1110,7 +1110,7 @@ Submitted to: \\[0.5\baselineskip]
 		\subsection{Constant Courant Number (CFL)}
 		
 		\noindent
-		Lastly, the Courant Number (CFL) was held as constant as possible at $CFL \approx 0.40$ and error was plotted as both a function of changing spatial resolution and changing time step for both the no source term case and the source term case. Again, similar behavior is observed in accordance with the our expectations given our analytical error analysis (Section \ref{sec:expectations}). 
+		Lastly, the Courant Number (CFL) was held as constant as possible at $CFL \approx 0.40$ and error was plotted as both a function of changing spatial resolution and changing time step for both the no source term case and the source term case. Again, similar behavior is observed in accordance with the expectations and analytical error analysis (Section \ref{sec:expectations}). 
 		
 		\FloatBarrier
 		\begin{figure}[h]
